--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         </script>
     </head>
     <body>
-        This website contains a map for Workadventu.re
+        This website contains the RHRN map for Workadventu.re
         <br/>
         You can access this map at <a id="mapLink" href=""></a>
+         <br/>
+        Read more about the event <a href="https://www.ljrmv.de/ljrmv/aktuelles/meldungen/20210204_save-the-date_rhrn-Gegenwartskonferenz.php">right here</a>.
     </body>
 </html>
