--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                 if (path.endsWith('index.html')) {
                     path = path.substr(path, path.length - 'index.html'.length);
                 }
-                var url = 'https://play.workadventu.re/_/global/'+window.location.host+path+'straze.json';
+                var url = 'https://play.workadventu.re/_/global/'+window.location.host+path+'main.json';
                 document.getElementById('mapLink').href = url;
                 document.getElementById('mapLink').innerText = url;
             };
@@ -16,6 +16,7 @@
         This website contains the RHRN map for Workadventu.re
         <br/>
         You can access this map at <a id="mapLink" href=""></a>
+         <br/>
          <br/>
         Read more about the event <a href="https://www.ljrmv.de/ljrmv/aktuelles/meldungen/20210204_save-the-date_rhrn-Gegenwartskonferenz.php">right here</a>.
     </body>
